--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": "CostaShapiro's AppShop",
   "main": "index.js",
   "dependencies": {
+  },
+  "devDependencies": {
     "gulp": "^3.8.10",
     "gulp-coffee": "^2.3.1",
     "gulp-sass": "^1.3.2",
-    "gulp-util": "^3.0.2"
-  },
-  "devDependencies": {
+    "gulp-util": "^3.0.2",
+    "gulp-haml-coffee": "^0.0.6",
     "bower": "^1.3.12",
-    "coffee-script": "^1.9.0",
-    "gulp-haml-coffee": "^0.0.6"
+    "coffee-script": "^1.9.0"
   },
   "scripts": {
     "test": "gulp test"
